# UNI

./: .gitignore  CMakeLists.txt  Cursach.csproj  Cursach.sln  Program.cs  README.md  Report.docx  analysis.py  config.yml  container1  container2  data.json  docker-compose.yml  generator.js  karno.js  luAlgorithm.py  main.cpp  main.py  plot.py  push_relabel.cpp  push_relabel.h  queine_in_C#.txt  queue.cpp  queue.h  quine.js  runTest.js  test-karno.txt  test-quine.txt  test.txt  tgbot.ino  ~$Report.docx  Псевдокод
HomeWork1/: index.ipynb
HomeWork2/: index.ipynb
Properties/: AssemblyInfo.cs
backend/: index.js
c# implementation/: Graphs.sln
c# implementation/Graphs/: Graphs.csproj  IntensityHistogram.cs  Main.Designer.cs  Main.cs  Program.cs  QualityAssertion.cs  Segmentation.cs
c# implementation/Graphs/Properties/: AssemblyInfo.cs
c++ max flow/: README.md  main.cpp  push_relabel.cpp
data/: empirical_f_data.txt
frontend/: index.html
